--- a/RestaurantAPI/appsettings.json
+++ b/RestaurantAPI/appsettings.json
@@ -1,6 +1,7 @@
 {
-  "Authentication" :
-  {
+  "AllowedOrigins": "http://localhost:8080",
+
+  "Authentication": {
     "JwtKey": "PRIVATE_KEY_DONT_SHARE",
     "JwtExpireDays": 15,
     "JwtIssuer": "http://restaurantapi.com"
